Maintain selections when editor blurred, and fix file uploads on race conditions (#227)
* maintain link selection when focus changes

* add fake link selection

* make attachment-upload re-fetch objects

* prettier

* finishing up direct upload stuff

* prettier

* add fake cursor

* add note about fake selections

* Add note to events about stopping form submissions on pending uploads

* add chnagelog entry

* fix css

* update changelog

* fix ff tests

* fix css

* fix css

* add prettierignore

--- a/src/exports/styles/trix-core.css
+++ b/src/exports/styles/trix-core.css
@@ -1,37 +1,6 @@
 /* These all come from Trix / ActionText. This should probably be cleaned up into
    a regular .css for users to include.
 */
-/* @import "prosemirror-codemark/dist/codemark.css"; */
-
-/**
-* https://github.com/curvenote/editor/blob/main/packages/prosemirror-codemark/src/codemark.css
-*/
-@keyframes blink {
-  49% {
-    border-color: unset;
-  }
-  50% {
-    border-color: Canvas;
-  }
-  99% {
-    border-color: Canvas;
-  }
-}
-.rhino-editor .no-cursor {
-  caret-color: transparent;
-}
-
-.rhino-editor .fake-cursor {
-  margin: 0;
-  padding: 0;
-  margin-right: -1px;
-  border-left-width: 1px;
-  border-left-style: solid;
-  animation: blink 1s;
-  animation-iteration-count: infinite;
-  position: relative;
-  z-index: 1;
-}
 
 .trix-content {
   border: 1px solid var(--rhino-border-color);
