--- a/src/exports/styles/trix.css
+++ b/src/exports/styles/trix.css
@@ -1,38 +1,8 @@
 /* THIS FILE IS AUTO-GENERATED. DO NOT EDIT BY HAND! */
+
 /* These all come from Trix / ActionText. This should probably be cleaned up into
    a regular .css for users to include.
 */
-/* @import "prosemirror-codemark/dist/codemark.css"; */
-
-/**
-* https://github.com/curvenote/editor/blob/main/packages/prosemirror-codemark/src/codemark.css
-*/
-@keyframes blink {
-  49% {
-    border-color: unset;
-  }
-  50% {
-    border-color: Canvas;
-  }
-  99% {
-    border-color: Canvas;
-  }
-}
-.rhino-editor .no-cursor {
-  caret-color: transparent;
-}
-
-.rhino-editor .fake-cursor {
-  margin: 0;
-  padding: 0;
-  margin-right: -1px;
-  border-left-width: 1px;
-  border-left-style: solid;
-  animation: blink 1s;
-  animation-iteration-count: infinite;
-  position: relative;
-  z-index: 1;
-}
 
 .trix-content {
   border: 1px solid var(--rhino-border-color);
@@ -371,7 +341,7 @@
   max-width: 100%;
 }
 
-/* src/exports/styles/editor.js:hostStyles */
+        /* src/exports/styles/editor.js:hostStyles */
 
   :host,
   .trix-content {
@@ -418,10 +388,82 @@
 
     --rhino-button-focus-background-color-hsl: 219 26% 95%;
 
+    /**
+     * Override "--rhino-fake-selection-color" to change the color of .rhino-selection when the editor is not focused.
+     */
+    --rhino-fake-selection-color: rgb(220, 220, 220);
+
     display: block;
 
     color: var(--rhino-text-color);
     color: light-dark(var(--rhino-text-color), var(--rhino-dark-text-color));
+  }
+
+
+/* src/exports/styles/editor.js:toolbarButtonStyles */
+
+  /**
+ * Cursor styles that are useful for providing a more "pleasant" editor experience.
+ */
+  /**
+* https://github.com/curvenote/editor/blob/main/packages/prosemirror-codemark/src/codemark.css
+*/
+  @keyframes rhino-blink {
+    49% {
+      border-color: unset;
+    }
+    50% {
+      border-color: Canvas;
+    }
+    99% {
+      border-color: Canvas;
+    }
+  }
+  .rhino-editor .no-cursor {
+    caret-color: transparent;
+  }
+
+  :where(.rhino-editor) .fake-cursor {
+    margin: 0;
+    padding: 0;
+    margin-right: -1px;
+    border-left-width: 1px;
+    border-left-style: solid;
+    animation: rhino-blink 1s;
+    animation-iteration-count: infinite;
+    position: relative;
+    z-index: 1;
+  }
+
+  /** This is for actual "selection" which are highlighting more than 1 character. */
+  :where(.rhino-editor .ProseMirror):not(:focus-within) .rhino-selection {
+    background: var(--rhino-fake-selection-color);
+  }
+
+  /** .fake-cursor-selection is for link "insertions" without selected text. */
+  :where(.rhino-editor) .rhino-insertion-placeholder {
+    display: none;
+    user-select: none;
+  }
+
+  /**
+This is used for showing a fake cursor for selections like link insertions
+*/
+  :where(.rhino-editor)[link-dialog-expanded] .rhino-insertion-placeholder {
+    margin: 0;
+    padding: 0;
+    margin-right: -1px;
+    margin-left: -2px;
+    border-left-width: 4px;
+    border-left-style: solid;
+    border-color: Highlight;
+    position: relative;
+    z-index: 1;
+    display: inline;
+  }
+
+  .ProseMirror-separator {
+    display: none !important;
   }
 
 
@@ -513,4 +555,3 @@
     height: var(--rhino-toolbar-icon-size);
     width: var(--rhino-toolbar-icon-size);
   }
-
